# garmin-insights

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.py
src/: main.py
src/api/insights/: __init__.py  activity.py  sleep.py
src/api/utils/: __init__.py  classes.py  helpers.py
src/garmin_stats/: __init__.py
